--- a/BLM.html
+++ b/BLM.html
@@ -15,6 +15,32 @@
     <p>Manasi's info</p>
 
 <!-- INSERT ALL MANASI"S INFO HERE-->
+<iframe style="border-style: none;" src="https://datamade.github.io/my-reps/" height="950" width="600"></iframe>
+
+<h1>The map and area elements</h1>
+
+<p>Click on the computer, the phone, or the cup of coffee to go to a new page and read more about the topic:</p>
+
+<img src="New_Jersey_Congressional_Districts,_113th_Congress.tif.png" alt="Workplace" usemap="#workmap" width="400" height="379">
+
+<map name="workmap">
+ 
+  <area shape="circle" coords="150,300,50" alt="District2" href="district 2.html">
+  <area shape="circle" coords="210,220,30" alt="District3" href="district 3.html">
+  <area shape="circle" coords="130,240,20" alt="District1" href="district 1.html">
+  <area shape="circle" coords="260,200,30" alt="District4" href="district 4.html">
+  <area shape="circle" coords="210,40,30" alt="District5" href="district 5.html">
+  <area shape="circle" coords="270,125,10" alt="District6" href="district 6.html">
+  <area shape="circle" coords="200,125,30" alt="District7" href="district 7.html">
+  <area shape="circle" coords="340,110,10" alt="District8" href="district 8.html">
+  <area shape="circle" coords="330,85,10" alt="District9" href="district 9.html">
+  <area shape="circle" coords="300,105,10" alt="District10" href="district 10.html">
+  <area shape="circle" coords="250,75,30" alt="District11" href="district 11.html">
+  <area shape="circle" coords="220,155,20" alt="District12" href="district 12.html">
+
+
+
+</map>
 
   </div>
 
@@ -49,7 +75,7 @@
     </div>
 
       <div class="item">
-        <img src="https://imagizer.imageshack.com/img923/3999/XQzNd4.png" alt="Chicago" style="width:100%;">
+        <img src="https://imagizer.imageshack.com/img922/6855/bYyHWd.png" alt="Chicago" style="width:100%;">
         <div class="carousel-caption">
             <h3>Schools must not let these unwelcome environments exist</h3>
             <p>How can we help the next generation combat racism when schools allow these toxic environments to exist in universities?</p>
@@ -82,12 +108,12 @@
   background-color: #777;
   color: white;
   cursor: pointer;
-  padding: 10px;
+  padding: 20px;
   width: 100%;
   border: none;
   text-align: left;
   outline: none;
-  font-size: 8px;
+  font-size: 10px;
 }
 
 .active, .collapsible:hover {
