--- a/BLM.html
+++ b/BLM.html
@@ -17,9 +17,9 @@
 <!-- INSERT ALL MANASI"S INFO HERE-->
 <iframe style="border-style: none;" src="https://datamade.github.io/my-reps/" height="950" width="600"></iframe>
 
-<h1>The map and area elements</h1>
+<h1>Kinda Sketchy bootleg map</h1>
 
-<p>Click on the computer, the phone, or the cup of coffee to go to a new page and read more about the topic:</p>
+<p>Click on your district to be directed to a contact page and we will write your email</p>
 
 <img src="New_Jersey_Congressional_Districts,_113th_Congress.tif.png" alt="Workplace" usemap="#workmap" width="400" height="379">
 
