--- a/BLM.html
+++ b/BLM.html
@@ -6,6 +6,7 @@
 <body>
 
   <div class="bar black">
+    
     <button class="bar-item button tablink red" onclick="openCity(event,'London')">NJ Policies</button>
     <button class="bar-item button tablink" onclick="openCity(event,'Paris')">Reach out to Universities</button>
     
@@ -142,6 +143,12 @@
 </style>
 </head>
 <body>
+
+  <div class="intro">
+    <h4>As protests nationwide begin to erupt, students are also taking a stand against racism in their schools and universities. In order to enable the next generations to eradicate racism in the future, we must make sure that the environments that they are in do not make racism acceptable. We must support these students efforts to make this message clear to these institutions.</h4>
+    <h3>Below are links to resources where you can get involved, and an email generator that voices that you <strong>care about these efforts and want to make a difference</strong></h3>
+ 
+  </div>
 
 <h2>Contact Universities/Schools</h2>
 <p>Universities</p>
