Co-authored-by: manasisoman <manasinsoman@gmail.com>

--- a/BLM.html
+++ b/BLM.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<title>BLM</title>
+<title>blmContact</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="BLM.css">
 <body>
 
+  <div class="title1">
+    <strong>blmContact</strong>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<em>educating, sharing, and voicing opinions to end racism once and for all</em>
+  </div>
   <div class="bar black">
     
     <button class="bar-item button tablink red" onclick="openCity(event,'London')">NJ Policies</button>
@@ -13,15 +16,21 @@
   </div>
   
   <div id="London" class="container border city">
-    <p>Manasi's info</p>
-
+    
+    <p> Insert information about police immunity here!</p>
 <!-- INSERT ALL MANASI"S INFO HERE-->
-<iframe style="border-style: none;" src="https://datamade.github.io/my-reps/" height="950" width="600"></iframe>
+<div class= "reps">
+<iframe style="border-style: none;" src="https://manasisoman.github.io/my-reps/" height="950" width="600"></iframe>
+</div>
+<h1>Interactive Contact Finder Map NJ</h1>
 
-<h1>Kinda Sketchy bootleg map</h1>
 
-<p>Click on your district to be directed to a contact page and we will write your email</p>
 
+<div class = infostart>
+
+  <p><strong>Click on your district to be directed to a contact page and we will write your email</strong></p>
+</div>
+<div class= "map">
 <img src="New_Jersey_Congressional_Districts,_113th_Congress.tif.png" alt="Workplace" usemap="#workmap" width="400" height="379">
 
 <map name="workmap">
@@ -42,8 +51,9 @@
 
 
 </map>
-
+</div>
   </div>
+
 
   <div id="Paris" class="container border city" style="display:none">
 <!-- INSERT ALL NANDITA"S INFO HERE-->
